[project]
name = "slide-timers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "google-api-python-client>=2.179.0",
    "google-api-python-client-stubs>=1.30.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
slide-timers = "main:cli"